fixed nav height issue on mobile screen

--- a/src/components/layout/header.scss
+++ b/src/components/layout/header.scss
@@ -1,10 +1,10 @@
 .header {
+  position: relative;
   padding: 8px 10px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: relative;
 
   &__logo {
     &--img {
@@ -15,9 +15,11 @@
     }
   }
 }
+
 .nav {
   display: flex;
   transition: all 0.3s;
+  z-index: 10;
   &__links {
     display: inline-block;
     text-decoration: none;
@@ -43,14 +45,18 @@
       color: #fff;
       background-color: #ff6363;
     }
+    @media (max-width: 534px) {
+      margin-top: 10px;
+    }
   }
   @media (max-width: 534px) {
     transform: translateX(-100vh);
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 250px;
     position: absolute;
+    top: 0;
+    right: 0;
     height: 100vh;
     width: 100vw;
     background-color: #fff;
